--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.936.0",
     "cloudinary": "^1.26.1",
     "cloudinary-multer": "^1.0.2",
     "cookie-parser": "~1.4.4",
@@ -19,6 +20,7 @@
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "sequelize": "^5.22.3",
