--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -14,6 +14,7 @@
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-validator": "^6.11.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
