--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -27,5 +27,9 @@
     "pg": "^8.6.0",
     "sequelize": "^5.22.3",
     "underscore": "^1.13.1"
+  },
+  "engines": {
+    "npm":"6.14.4",
+    "node":"10.19.0"
   }
 }
