--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -29,7 +29,10 @@
     "underscore": "^1.13.1"
   },
   "engines": {
-    "npm":"6.14.4",
-    "node":"10.19.0"
+    "npm": "6.14.4",
+    "node": "10.19.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.9"
   }
 }
