--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "aws-sdk": "^2.936.0",
@@ -27,10 +27,6 @@
     "pg": "^8.6.0",
     "sequelize": "^5.22.3",
     "underscore": "^1.13.1"
-  },
-  "engines": {
-    "npm": "6.14.4",
-    "node": "10.19.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.9"
