--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -28,6 +28,10 @@
     "sequelize": "^5.22.3",
     "underscore": "^1.13.1"
   },
+  "engines": {
+    "npm": "6.14.4",
+    "node": "10.19.0"
+  },
   "devDependencies": {
     "nodemon": "^2.0.9"
   }
