--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.26.1",
     "cloudinary-multer": "^1.0.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
@@ -24,6 +25,7 @@
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "path": "^0.12.7",
     "pg": "^8.6.0",
     "sequelize": "^5.22.3",
     "underscore": "^1.13.1"
