--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -3,18 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "aws-sdk": "^2.936.0",
+    "body-parser": "^1.19.0",
     "cloudinary": "^1.26.1",
     "cloudinary-multer": "^1.0.2",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "datauri": "^4.0.1",
     "debug": "~2.6.9",
     "del": "^6.0.0",
     "dotenv": "^10.0.0",
-    "express": "~4.16.1",
+    "etag": "^1.8.1",
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
     "express-validator": "^6.11.0",
     "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
@@ -27,14 +32,20 @@
     "mysql2": "^2.2.5",
     "path": "^0.12.7",
     "pg": "^8.6.0",
+    "random-key": "^0.3.2",
+    "save": "^2.4.0",
     "sequelize": "^5.22.3",
-    "underscore": "^1.13.1"
+    "strapi": "^3.6.5",
+    "tslib": "^2.3.0",
+    "underscore": "^1.13.1",
+    "validatorjs": "^3.22.1"
   },
   "engines": {
     "npm": "6.14.4",
     "node": "10.19.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "sequelize-cli": "^6.2.0"
   }
 }
