--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -31,6 +31,10 @@
     "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
     "random-key": "^0.3.2",
