--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -23,8 +23,12 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.11.0",
     "fs": "0.0.1-security",
+    "google-auth-library": "^7.9.2",
     "http-errors": "~1.6.3",
+    "https": "^1.0.0",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
