--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^6.11.0",
     "fs": "0.0.1-security",
     "google-auth-library": "^7.9.2",
+    "googleapis": "^87.0.0",
     "http-errors": "~1.6.3",
     "https": "^1.0.0",
     "jade": "~1.11.0",
@@ -41,6 +42,7 @@
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^8.6.0",
+    "query-string": "^7.0.1",
     "random-key": "^0.3.2",
     "save": "^2.4.0",
     "sequelize": "^5.22.3",
