--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.936.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cloudinary": "^1.26.1",
     "cloudinary-multer": "^1.0.2",
