--- a/e_commerce_app/package.json
+++ b/e_commerce_app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "createCities": "node ./seeders/20210907082748-createCities"
   },
   "dependencies": {
